syntax = "proto3";
import "test_discovery.proto";

option csharp_namespace = "TestRunner.Contract.Grpc.V1";

package processing_notification_service;


service TestSessionService {
  rpc DiscoverTests(DiscoverTestsRequest) returns (DiscoverTestsResponse);
  rpc RunAllTests(RunAllTestsRequest) returns (RunAllTestsResponse);
  rpc RunSelectedTests(RunSelectedTestsRequest) returns (RunSelectedTestsResponse);
}
message RunAllTestsRequest {
  string userId = 1;
  repeated string paths = 2;
}
message RunSelectedTestsRequest {
  string userId = 1;
  repeated TestCase testCases = 2;
}
message RunSelectedTestsResponse{
  bool success = 1;
  string requestId = 2;
}
message RunAllTestsResponse{
  bool success = 1;
  string requestId = 2;
}
message DiscoverTestsRequest {
  string userId = 1;
  repeated string paths = 2;
}
message DiscoverTestsResponse{
  bool success = 1;
  string requestId = 2;
}






